vips extension changelog

Version 0.1.1 (2016-10-03)
--------------------------
	* Support draw operations

Version 0.1.0 (2016-09-20)
--------------------------
	* Initial release
